Enhanced Drop to set maxHeight within the viewport so it is always visible and scrollable if needed. Fixes GitHub issue #402.

--- a/src/scss/grommet-core/_objects.button.scss
+++ b/src/scss/grommet-core/_objects.button.scss
@@ -132,7 +132,8 @@ $button-horizontal-padding: round($inuit-base-spacing-unit) - $button-border-wid
   cursor: default;
 }
 
-.button--icon {
+.button--icon,
+.button:not(.button--fill) {
   flex: 0 0 auto;
 }
 
